# Trinity-Launcher

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MANUAL.md  Makefile  README.md  README_eng.md  TRANSLATION.md  build.sh  compose.yaml  docker-instructions.md  docker.txt  fix_ca.py  parse_ts.py  patchelf  trinchete.pro  trinito.pro  update_translations.py
.github/workflows/: appimage.yml  blank.yml
app/: CMakeLists.txt
app/src/: main.cpp  trinito_main.cpp
i18n/: .gitignore
include/TrinityLib/core/: discord_manager.hpp  exporter.hpp  game_launcher.hpp  version_config.hpp
include/TrinityLib/ui/: app_helpers.hpp
include/TrinityLib/ui/windows/: launcher_window.hpp  trinito_window.hpp
resources/: com.trench.trinity.launcher.desktop  resources.qrc
resources/i18n/: trinity_ca.qm  trinity_ca.ts  trinity_en.qm  trinity_en.ts  trinity_es.qm  trinity_es.ts  trinity_pt.qm  trinity_pt.ts  trinity_uk.qm  trinity_uk.ts
resources/icons/: trini_vector.png.old
resources/runtime/: Read-mcpelauncher-build.git
resources/shortcuts/: com.trench.trinity.launcher.desktop
src/: trinito_main.cpp
src/TrinityLib/core/: CMakeLists.txt  discord_manager.cpp  exporter.cpp  game_launcher.cpp  pack_installer.cpp  version_config.cpp  version_manager.cpp
src/TrinityLib/ui/: CMakeLists.txt
src/TrinityLib/ui/dialogs/: extract_dialog.cpp
src/TrinityLib/ui/widgets/: version_selector.cpp
src/TrinityLib/ui/windows/: launcher_window.cpp  trinito_window.cpp
src/core/: CMakeLists.txt  exporter.cpp  exporter.h  game_launcher.cpp  version_config.cpp  version_manager.cpp  version_manager.h
src/ui/: CMakeLists.txt
src/ui/windows/: launcher_window.cpp  launcher_window.h  trinito_window.cpp
tests/: CMakeLists.txt
